--- a/index.html
+++ b/index.html
@@ -52,6 +52,42 @@
                     <li id="nome"><a class="link-nome" href="https://pt.wikipedia.org/wiki/Hedy_Lamarr" target="_blank">Hedy Lamarr</a></li>
                 </ul>
             </section>
+            <section>
+                <ul class="cientistas" id="cientista-6">
+                    <li><img class="imagem-1" src="./media/mary-anning.jpeg" width="400px"> </li>
+                    <li id="nome"><a class="link-nome" href="https://pt.wikipedia.org/wiki/Mary_Anning" target="_blank">Mary Anning</a></li>
+                </ul>
+            </section>
+            <section>
+                <ul class="cientistas" id="cientista-7">
+                    <li><img class="imagem-1" src="./media/rosalind-franklin.jpeg" width="400px"> </li>
+                    <li id="nome"><a class="link-nome" href="https://pt.wikipedia.org/wiki/Rosalind_Franklin" target="_blank">Rosalind Franklin</a></li>
+                </ul>
+            </section>
+            <section>
+                <ul class="cientistas" id="cientista-8">
+                    <li><img class="imagem-1" src="./media/jane-goodall.jpeg" width="400px"> </li>
+                    <li id="nome"><a class="link-nome" href="https://pt.wikipedia.org/wiki/Jane_Goodall" target="_blank">Jane Goodall</a></li>
+                </ul>
+            </section>
+            <section>
+                <ul class="cientistas" id="cientista-9">
+                    <li><img class="imagem-1" src="./media/mary-jackson.jpg" width="400px"> </li>
+                    <li id="nome"><a class="link-nome" href="https://pt.wikipedia.org/wiki/Mary_Jackson" target="_blank">Mary Jackson</a></li>
+                </ul>
+            </section>
+            <section>
+                <ul class="cientistas" id="cientista-10">
+                    <li><img class="imagem-1" src="./media/katherine-johnson.jpg" width="400px"> </li>
+                    <li id="nome"><a class="link-nome" href="https://pt.wikipedia.org/wiki/Katherine_Johnson" target="_blank">Katherine Johnson</a></li>
+                </ul>
+            </section>
+            <section>
+                <ul class="cientistas" id="cientista-11">
+                    <li><img class="imagem-1" src="./media/mae-jemison.jpg" width="400px"> </li>
+                    <li id="nome"><a class="link-nome" href="https://pt.wikipedia.org/wiki/Mae_Jemison" target="_blank">Mae Jemison</a></li>
+                </ul>
+            </section>
         </div>
     </main>
 
