--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container" id="container">
     <nav class="input-botao">
         <input id="input" placeholder="Pesquisar">
-        <button id="botao" onclick="searchCientista(event)">OK</button>
+        <button id="botao" onclick="procurarCientista(event)">OK</button>
     </nav>
 
     <header>
